Flattening out the files

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css_style.css">
 
 <header>
   <a href="#" class="current">Overview</a>
@@ -88,11 +88,11 @@
   </div>
 </script>
 
-<script src="js/jquery.js"></script>
-<script src="js/underscore.js"></script>
-<script src="js/backbone.js"></script>
-<script src="js/app.js"></script>
-<script src="js/menu.js"></script>
+<script src="js_jquery.js"></script>
+<script src="js_underscore.js"></script>
+<script src="js_backbone.js"></script>
+<script src="js_app.js"></script>
+<script src="js_menu.js"></script>
 
 <script type="text/javascript">
   SR.app = new SR.App();
