Allow for rows to not be implemented

--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
       </div>
 
       <div class="row header">Proximity</div>
-      <!--
-      <div class="row clickable proximity-crowd">
+      <div class="row clickable not-implemented">
         Crowd detection
         <div class="toggle <%= crowd ? 'on' : '' %>"></div>
       </div>
-      -->
       <div class="row clickable proximity-location">
         Locations
       </div>
