Adding no-implement cursors

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </div>
 
       <div class="row header">Custom Settings</div>
-      <div class="row clickable proximity-crowd">
+      <div class="row not-implemented">
         Global application settings
       </div>
-      <div class="row clickable proximity-location">
+      <div class="row not-implemented">
         Contact settings
       </div>
     </div>
@@ -101,14 +101,16 @@
         <div class="icon"></div>
         <div class="title">Recurring events</div>
       </header>
-      <div class="row bold">
+      <div class="row bold not-implemented">
         Add new <span class="plus">+</span>
       </div>
       <div class="row header">Configured events</div>
       <div class="row pin">
-        In class
+        <div class="not-implemented">
+          In class
+        </div>
       </div>
-      <div class="row">
+      <div class="row not-implemented">
         Baby's nap time
       </div>
     </div>
@@ -126,10 +128,10 @@
         Add new <span class="plus">+</span>
       </div>
       <div class="row header">Saved locations</div>
-      <div class="row">
+      <div class="row not-implemented">
         Library
       </div>
-      <div class="row">
+      <div class="row not-implemented">
         Cinerama
       </div>
     </div>
@@ -149,9 +151,9 @@
         <div class="map-inner-radius"></div>
         <div class="map-pin" draggable="true"></div>
 
-        <div class="button overlay ringer">Ringer: off</div>
-        <div class="button overlay schedule">Schedule</div>
-        <div class="button overlay save">Save</div>
+        <div class="button overlay ringer not-implemented">Ringer: off</div>
+        <div class="button overlay schedule not-implemented">Schedule</div>
+        <div class="button overlay save not-implemented">Save</div>
       </div>
     </div>
   </div>
