--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   </div>
   <div id="docs"></div>
   <div id="proto">
+    <div class="chrome-message">
+      This was written for Chrome, if you're not running Chrome, get it.
+    </div>
     <div class="text-content">
       <a class="btn call" href="#">call</a>
       <br>
