Add more content and styling

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
 
 <header>
   <a class="index" href="#" class="current">Overview</a>
-  <a class="docs" href="#docs">Documentation</a>
+  <a class="docs" href="#docs">Reports</a>
   <a class="proto" href="#proto">Prototype</a>
 </header>
 
 <div class="main">
   <div id="index">
+    <div class="text-content">
+      <b>Smart Ringer</b> is a great way to manage your phone's ringer
+      <br>
+      <br>
+      <ul>
+        <li> Orientation
+        <li> Geofencing
+        <li> Multiple constraints like location and schedule
+        <li> Calendar integration
+      </ul>
+
+      <div class="authors">
+        Anh-Kiet Ngo<br>
+        Ayman Abdo
+      </div>
+    </div>
     <div class="phone">
       <div class="content-wrapper">
         <div class="content">
@@ -24,7 +40,19 @@
       </div>
     </div>
   </div>
-  <div id="docs"></div>
+  <div id="docs">
+    <div class="link contextual-inquiry">
+      <a href="contextual-inquiry.docx" class="word"></a>
+      <a href="contextual-inquiry.pdf" class="pdf"></a>
+      <aside>Contextual Inquiry</aside>
+    </div>
+
+    <div class="link final-report">
+      <a href="#" class="word"></a>
+      <a href="#" class="pdf"></a>
+      <aside>Final Report</aside>
+    </div>
+  </div>
   <div id="proto">
     <div class="chrome-message">
       This was written for Chrome, if you're not running Chrome, get it.
@@ -36,6 +64,17 @@
       <a class="btn shake" href="#">shake phone</a>
     </div>
     <div id="phone"></div>
+  </div>
+  <div id="about">
+    <div class="text-content">
+      <h3>Anh-Kiet Ngo</h3>
+      <article>
+        AK is a software developer, but occasionally likes to blog about random
+        things like <a href="http://minirefrigeratorzone.com">refrigerators</a>.
+      </article>
+      <h3>Ayman Abdo</h3>
+      <article></article>
+    </div>
   </div>
 </div>
 
