--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="main">
   <div id="index">
     <div class="text-content">
-      <b>Smart Ringer</b> is a great way to manage your phone's ringer
+      <b>Smart Ringer</b> gives you better control over your phone's ringer
       <br>
       <br>
       <ul>
