--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li> Orientation
         <li> Geofencing
-        <li> Multiple constraints like location and schedule
+        <li> Multiple constraints
         <li> Calendar integration
       </ul>
 
