Adding report to website

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
 
     <div class="link final-report">
-      <a href="#" class="word"></a>
-      <a href="#" class="pdf"></a>
+      <a href="final-report.docx" class="word"></a>
+      <a href="final-report.pdf" class="pdf"></a>
       <aside>Final Report</aside>
     </div>
   </div>
@@ -70,7 +70,8 @@
       <h3>Anh-Kiet Ngo</h3>
       <article>
         AK is a software developer, but occasionally likes to blog about random
-        things like <a href="http://minirefrigeratorzone.com">refrigerators</a>.
+        things like <a href="http://minirefrigeratorzone.com">refrigerators</a>
+        and <a href="http://www.gentlesignal.com">gentle signal</a>.
       </article>
       <h3>Ayman Abdo</h3>
       <article></article>
